--- a/demos/cssLayout/index3.html
+++ b/demos/cssLayout/index3.html
@@ -21,7 +21,7 @@
             overflow: auto;
         }
         .container-wrapper {
-            min-height: (100% - 50px);
+            min-height: calc(100% - 50px);
         }
         .container-main {
             padding-bottom: 50px;
@@ -44,10 +44,6 @@
                 Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
                 Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
                 Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
-                Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
-                Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
-                Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局Sticky footers布局
-                
             </div>
         </div>
         <div class="container-footer">  
