--- a/demos/1pxBorder/index2.html
+++ b/demos/1pxBorder/index2.html
@@ -20,7 +20,7 @@
             width: 100%;
             border-top: 1px solid red;
         }
-        /* @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5){
+        @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5){
             .container::after {
                 -webkit-transform: scaleY(0.7);
                 transform: scaleY(0.7);
@@ -38,7 +38,7 @@
                 -webkit-transform: scaleY(0.33);
                 transform: scaleY(0.33);
             }
-        } */
+        }
     </style>
 </head>
 <body>
